--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
 
     <main id="cart">
+        <div class="color"></div>
       <h2>Your Cart</h2>
 
       <div class="cart--item-list-container">
