Added sort by Price

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </header>
 
     <main id="cart">
+      <button id="asc">Sort low to high
+      </button>
+      <button id="desc">Sort high to low</button>
         <div class="color"></div>
       <h2>Your Cart</h2>
 
