Added alphabetic and price sorting

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       <button id="asc">Sort low to high
       </button>
       <button id="desc">Sort high to low</button>
-        <div class="color"></div>
+      <button id="alphDesc">Sort Z to A</button>
+      <button id="alphAsc">Sort A to Z</button>
+
+
+      <div class="color"></div>
       <h2>Your Cart</h2>
 
       <div class="cart--item-list-container">
